--- a/app.css
+++ b/app.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 10px;
     width: 50%;
+    margin-left: 25%;
 }
 
 
@@ -13,6 +14,7 @@
     color: white;
     width: 100%;
     padding: 10px;
+    
 }
 
 .input{
@@ -27,3 +29,16 @@
     border: none;
     margin: 5px 0px;
 }
+h1,h3 {
+    text-decoration: underline solid black;
+    text-align: center;
+}
+
+p {
+    text-align: justify;
+    margin-left: 25%;
+    margin-right: 25%;
+    color: #042e5c;
+    font-weight: bold;
+}
+
